--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Automates interactions on http://testingimp.great-site.net using Puppeteer",
   "main": "index.js",
   "dependencies": {
-    "puppeteer": "^19.0.0"
+    "puppeteer": "^19.0.0",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node index.js"
